--- a/package.json
+++ b/package.json
@@ -2,16 +2,32 @@
   "name": "PMD_wonder_mail",
   "version": "0.0.1",
   "private": true,
+  "main": "index.web.js",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "web": "react-scripts start",
+    "test": "jest",
+    "windows": "npx @react-native-community/cli run-windows"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.10.2",
+    "native-base": "^3.4.28",
     "react": "18.3.1",
-    "react-native": "0.76.5"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-native": "0.76.5",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-element-dropdown": "^2.12.2",
+    "react-native-picker-select": "^9.3.1",
+    "react-native-safe-area-context": "^5.0.0",
+    "react-native-svg": "^15.10.1",
+    "react-native-web": "^0.19.13",
+    "react-native-windows": "^0.76.0",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -29,11 +45,31 @@
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "metro-config": "^0.81.0",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
   "engines": {
     "node": ">=18"
+  },
+  "react-native-windows": {
+    "init-windows": {
+      "name": "PmdWonderMail",
+      "namespace": "PmdWonderMail",
+      "template": "old/uwp-cpp-app"
+    }
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
